Set to not check for update. It's not posted at Splunk apps

--- a/default/app.conf
+++ b/default/app.conf
@@ -9,12 +9,13 @@
 
 [ui]
 is_visible=true
-label=OSCam 2.4
+label=OSCam 2.5
 
 [launcher]
 author = Jotne
 description = OScam add-on for server.
-version = 2.4
+version = 2.5
 
 [package]
 id = OSCam
+check_for_updates = 0
