--- a/default/app.conf
+++ b/default/app.conf
@@ -9,13 +9,39 @@
 
 [ui]
 is_visible=true
-label=OSCam 2.5
+label=OSCam 3.1
 
 [launcher]
 author = Jotne
 description = OScam add-on for server.
-version = 2.5
+version = 3.1
 
 [package]
 id = OSCam
 check_for_updates = 0
+
+# 3.0 Updated to read servers without ":"
+# 3.0 Removed limit in reading servers in gui to show all in list
+# 3.0 Removed duplicate panel in OScam REader Connections activities
+# 3.0 Added info for "disconect RTO"
+# 3.0 Fixed lots of typos
+# 3.0 Added info in OScam Restarts
+# 3.0 Added host to view 7.4
+# 3.0 Added info about manual user file save and extra panel for it
+# 3.0 Added Panel 12.  OSCam edit info
+# 3.0 Changed order of view.  Why some is wrong is more important than statistics.
+# 3.0 Spltted panel 2.5 Invalid client in to 2.5 Wrong password and 2.6 Disabled account
+# 3.0 Rewitten module 13 OScam ecm errors
+# 3.0 Added more module info
+# 3.0 Removed Anonymous from view 2.2, since anonymous is part of other action
+# 3.0 Added props and eventtypes for deug level=1
+# 3.0 Fexed regext to extract clients with all type of characters (change [\w-] to [\S])
+# 3.0 Added eventtype for all log level
+# 3.0 Added tags for log level
+# 3.0 Added view for expeired clients or clients outside timefream
+# 3.0 Added some anticascading log info
+# 3.0 Added Search to OSCam menu
+
+# 3.1 Added missing info about "13. OSCam ecm errors".
+# 3.1 Fixed wrong extraction of sid/pid etc
+# 3.1 Fixed missing date range in "6. OSCam Channels not in oscam.srvid".
