--- a/default/props.conf
+++ b/default/props.conf
@@ -26,32 +26,110 @@ TRANSFORMS-force_st_for_oscam = force_oscam_st
 ####
 
 [oscam]
-EXTRACT-oscam_divid = oscam.*\(ecm\).+?\((?<caid>[^@]+)@(?<pvid>[^\/]+)\/\w{4}\/(?<sid>[^\/]{4})\/
-EXTRACT-oscam_channel1 = oscam.*\(ecm\).* - (?<channel>(?:(?!\((?:invalid SID|no matching reader|real \d+ ms|cw count \d+)\)).)*)(?=\s|$)
-EXTRACT-oscam_channel2 = oscam.*sdt-info.*channel:\s(?<channel>[^)]+)\)
-EXTRACT-oscam_client_name1 = oscam.*\(ecm\)\s+(?<client>[\w-]+)\s+\(
-EXTRACT-oscam_client_name2 = oscam.*\(client\)[^(]+granted \((?<client>[\w-]+)
-EXTRACT-oscam_client_name3 = oscam.*\(client\)\s(?<client>[\w-]+)\sdisconnected
-EXTRACT-oscam_client_name4 = oscam.*\s+\(reader\).+] (?<client>[\w-]+)\semmtype
-EXTRACT-oscam_client_name5 = oscam.*duplicate user\s'(?<client>[\w-]+)
-EXTRACT-oscam_client_name6 = oscam.*\((?<client>[\w-]+),\sinvalid
-EXTRACT-oscam_client_name7 = oscam.*password\sfor\s'(?<client>[^']+)
-EXTRACT-oscam_client_name8 = oscam.*cccam\)\saccount\s'(?<client>\w+)
-EXTRACT-oscam_client_name9 = oscam.*s\)\s(?<client>[\w-]+):\spacket
-EXTRACT-oscam_client_name10 = oscam.*killing client (?<client>\w+)
-EXTRACT-oscam_ecm_status = oscam.*\): (?<ecm>[^(]+) \(.*ms
-EXTRACT-oscam_host_id = oscam\[(?<host_id>[^\]]+)\]:
-EXTRACT-oscam_ip = oscam.*\s(?<src_ip>\d+\.\d+\.\d+\.\d+)
-EXTRACT-oscam_module1 = oscam.*?\((?<module>(anticasc|cccam|client|config|dvbapi|emmcache|ecm|main|net|reader|stat|webif))\)
-EXTRACT-oscam_module2 = oscam.*\[(?<module>Emu)\]
-EXTRACT-oscam_module3 = oscam.*>>\s(?<module>\S+)
-EXTRACT-oscam_proxy_info = oscam.*ecm.*\((?<proxy>\w+\/\d+\/\d+\/\d+)\)
-EXTRACT-oscam_reader_port = oscam.*\(reader\).*connecting.*:(?<dest_port>[\w-]+)
-EXTRACT-oscam_response_time = oscam.*\(ecm\).+\((?<response_time>\d+)\sms\)
-EXTRACT-oscam_server_name1 = oscam.*ecm.*\)\sby\s(?<server>[^ ,]+)
-EXTRACT-oscam_server_name2 = oscam.*\(reader\)\s(?<server>[^ ]+)
-EXTRACT-oscam_server_name3 = oscam.*cccam\(r\)\s(?<server>[^: ]+)
-EXTRACT-oscam_server_name4 = oscam.*from\sreader\s(?<server>[^ ,]+)
-EXTRACT-oscam_server_name5 = oscam.*resolve\s(?<server>[^ ,]+)
-EXTRACT-oscam_session_id = oscam\[\d+\]:\s(?<session_id>\w{8})
-EXTRACT-oscam_web_user_ip = oscam.*WebIF\sfrom\s(?<web_user_ip>\d+\.\d+\.\d+\.\d+)
+# Log level=0
+EXTRACT-oscam_build_0_1 = oscam.*cardserver.*build\sr(?<build>[^\s]*)\s\((?<os>[^\)]*)
+EXTRACT-oscam_channel_0_1 = oscam.*\(ecm\).* - (?<channel>(?:(?!\((?:invalid SID|no matching reader|real \d+ ms|cw count \d+)\)).)*)(?=\s|$)
+EXTRACT-oscam_channel_0_2 = oscam.*sdt-info.*channel:\s(?<channel>.+)\)
+EXTRACT-oscam_client_name_0_1 = oscam.*\(ecm\)\s+(?<client>[\S]+)\s+\(
+EXTRACT-oscam_client_name_0_2 = oscam.*\(client\)[^(]+granted \((?<client>[^,]+),\s
+EXTRACT-oscam_client_name_0_3 = oscam.*\(client\)\s(?<client>[\S]+)\sdisconnected
+EXTRACT-oscam_client_name_0_4 = oscam.*\s+\(reader\).+] (?<client>[\S]+)\semmtype
+EXTRACT-oscam_client_name_0_5 = oscam.*duplicate user\s'(?<client>[\w-]+)
+EXTRACT-oscam_client_name_0_6 = oscam.*\((?<client>[\w-]+),\sinvalid
+EXTRACT-oscam_client_name_0_7 = oscam.*password\sfor\s'(?<client>[^']+)
+EXTRACT-oscam_client_name_0_8 = oscam.*cccam\)\saccount\s'(?<client>[^']+)'\s
+EXTRACT-oscam_client_name_0_9 = oscam.*s\)\s(?<client>[\w-]+):\spacket
+EXTRACT-oscam_client_name_0_10 = oscam.*killing client (?<client>\S+)
+EXTRACT-oscam_demuxer_0_1 =  oscam.*\(dvbapi\) Demuxer\s(?<demuxer>\d+)
+EXTRACT-oscam_divid_0_1 = oscam.*\((cache|ecm|stat)\).+(\s|\()(?<caid>[^@]+)@(?<pvid>[^\/]+)\/\w{4}\/(?<sid>[^\/]{4})\/[^:]+:(?<hash>[^)]+)\)
+EXTRACT-oscam_divid_0_2 = oscam.*\(constcw\).+CAID\s(?<caid>[^ ]+)\sPROVID\s(?<pvid>[^ ]+)\sSRVID\s(?<sid>[^ ]+)
+EXTRACT-oscam_divid_0_3 = oscam.*\(dvbapi\).*srvid\s(?<caid>\S+)\s\((?<channel>[^)]+)\) on adapter\s(?<adapter>\S+)\scamask\s(?<camask>\$
+EXTRACT-oscam_divid_0_4 = oscam.*\(dvbapi\).*CAID\s(?<caid>\S+)\sPROVID\s(?<pvid>\S+)\sECMPID\s(?<ecmpid>\S+) ANY CHID PMTPID (?<pmtpid>\S+) VPID (?<vpid>\S+)
+EXTRACT-oscam_divid_0_5 = oscam.*\(dvbapi\).*CAID:\s(?<caid>\S+)\sECM_PID:\s(?<ecmpid>\S+)\sPROVID:\s(?<pvid>\S+)
+EXTRACT-oscam_divid_0_6 = oscam.*\(dvbapi\).+serving srvid\s(?<srvid>\S+)\s\((?<channel>.+)\)\son\sadapter\s(?<adapter>\S+)\scamask\s(?<camask>\S+)\sindex\s(?<inx>\S+)\spmtpid\s(?<pmtpid>\S+)
+EXTRACT-oscam_ecm_status_0_1 = oscam.*\): (?<ecm>[^(]+) \(.*ms
+EXTRACT-oscam_hardware_0_1 = oscam.*build r\d+ \((?<hardware>[^\)]+)\)
+EXTRACT-oscam_host_id_0_1 = oscam\[(?<host_id>[^\]]+)\]:
+EXTRACT-oscam_module_0_1 = oscam.*?\((?<module>(-|anticasc|cache|cccam|chk|client|config|constcw|dvbapi|emmcache|ecm|failban|main|net|newcamd|reader|stat|webif))\)
+EXTRACT-oscam_module_0_2 = oscam.*\[(?<module>Emu)\]
+EXTRACT-oscam_module_0_3 = oscam.*>>\s(?<module>\S+)
+EXTRACT-oscam_pid_0_1 = oscam.*\(dvbapi\).+pid:\s(?<pid>\S+)\s
+EXTRACT-oscam_protocol_0_1 = oscam.*\(cccam\)\s(?<protocol>[^ ]+)\sdetected
+EXTRACT-oscam_protocol_version_0_1 = oscam.*(build|version:)\sr(?<protocol_version>\d+)
+EXTRACT-oscam_provider_0_1 = oscam.*\(dvbapi\).+provider:\s(?<provider>.+)\s-\s
+EXTRACT-oscam_proxy_info_0_1 = oscam.*ecm.*\((?<proxy>\w+\/\d+\/\d+\/\d+)\)
+EXTRACT-oscam_reader_port_0_1 = oscam.*\(reader\).*connecting.*:(?<dest_port>[\d]+)
+EXTRACT-oscam_response_time_0_1 = oscam.*\(ecm\).+\((?<response_time>\d+)\sms\)
+EXTRACT-oscam_server_name_0_1 = oscam.*ecm.*\)\sby\s(?<server>[^ ,]+)
+EXTRACT-oscam_server_name_0_2 = oscam.*\(reader\)\s(?<server>\S+)\s\[
+EXTRACT-oscam_server_name_0_3 = oscam.*cccam\(r\)\s(?<server>[^: ]+)
+EXTRACT-oscam_server_name_0_4 = oscam.*from\sreader\s(?<server>[^ ,]+)
+EXTRACT-oscam_server_name_0_5 = oscam.*resolve\s(?<server>[^ ,]+)
+EXTRACT-oscam_server_name_0_6 = oscam.*\((webif|emmcache)\)\s[rR]eader\s(?<server>\S+)\s
+EXTRACT-oscam_server_name_0_7 = oscam.*cccam\)\s(?<server>\S+)
+EXTRACT-oscam_session_id_0_1 = oscam\[\d+\]:\s(?<session_id>\w{8})
+EXTRACT-oscam_src_ip_0_1 = oscam.*[\s(](?<src_ip>\d+\.\d+\.\d+\.\d+)
+EXTRACT-oscam_src_port_0_1 = oscam.*\s\d+\.\d+\.\d+\.\d+:(?<src_port>\d+)
+EXTRACT-oscam_web_user_ip_0_1 = oscam.*WebIF\sfrom\s(?<web_user_ip>\d+\.\d+\.\d+\.\d+)
+
+# Log level=1
+EXTRACT-oscam_caid_1_1 = oscam.*\(chk\) caid\s+(?<caid>[^ ]+)
+EXTRACT-oscam_caid_1_2 = oscam.*\(cccam\).*caid\s+(?<caid>[^ ]+)
+EXTRACT-oscam_client_name_1_1 = oscam.*add client job action \d+ queue length \d+ (?<client>\S+)
+EXTRACT-oscam_client_name_1_2 = oscam.*ccc idle (?<client>\S+)
+EXTRACT-oscam_client_name_1_3 = oscam.*\(reader\).*User \((?<client>\S+)\)\shas
+EXTRACT-oscam_client_name_1_4 = oscam.*\(failban\).*info: (?<client>\S+)
+EXTRACT-oscam_client_name_1_5 = oscam.*\(ecm\) (timeout|fallback) for\s(?<client>\S+)
+EXTRACT-oscam_ecm_hash_1_1 = oscam.*ecm hash:?[ =](?<hash>[^ ]+)
+EXTRACT-oscam_divid3_1_1 = oscam.*\(ecm\).+ caid (?<caid>[^ ,]+),? (prid|prov) (?<pvid>[^ ,]+),? srvid (?<sid>[^ }]+)}?\s
+EXTRACT-oscam_response_time2_1_1 = oscam.*after\s(?<response_time>\d+)\sms
+EXTRACT-oscam_server_name_1_1 = oscam.*data from add_job.*client r\s(?<server>[^ ,]+)
+EXTRACT-oscam_server_name_1_2 = oscam.*add reader job action.*length \d+\s(?<server>[^ ,]+)
+EXTRACT-oscam_server_name_1_3 = oscam.*request_cw stage=\d+ to reader\s(?<server>[^ ,]+)\s
+EXTRACT-oscam_server_name_1_4 = oscam.*\(chk\) reader unavailable\s(?<server>[^ ,]+)
+EXTRACT-oscam_server_name_1_5 = oscam.*caidlist reader\s(?<server>\S+)
+EXTRACT-oscam_server_name_1_6 = oscam.*not matching reader\s(?<server>\S+)
+EXTRACT-oscam_server_name_1_7 = oscam.*\(cccam\) got \d+ cards from\s(?<server>\S+)
+EXTRACT-oscam_server_name_1_8 = oscam.*\(cccam\) asking reader\s(?<server>\S+)
+EXTRACT-oscam_server_name_1_9 = oscam.*\(chk\) (r-filter|entitlements check failed on) reader\s(?<server>[^ ,]+)
+EXTRACT-oscam_sid_1_1 = oscam.*\(chk\) service\s(?<sid>\S+)
+
+# Log level=2
+EXTRACT-oscam_server_name_2_1 = oscam.*\(reader\) casc ecm\s\((?<server>[^\)]+)\)
+
+# Log level=4
+EXTRACT-oscam_divid_4_1 = oscam.*\(reader\).*servicename:\s(?<caid>[^@]+)@(?<pvid>[^:]+):(?<sid>\S+)\s
+EXTRACT-oscam_sid_4_1 = oscam.*\(cccam\).*ecm for sid\s(?<sid>[^()]+)\(
+EXTRACT-oscam_server_name_4_1 = oscam.*\(cccam\)\s(?<server>\S+)\snetwork
+EXTRACT-oscam_server_name_4_2 = oscam.*\(ecm\) Reader\s(?<server>\S+)\s
+
+# Log level=8
+EXTRACT-oscam_client_name_8_1 = oscam.*\(cccam\)\scccam\(s\)\s(?<client>[^:]+):\s
+EXTRACT-oscam_divid_8_1 = oscam.*\(cccam\).*caid\s(?<caid>\S+)\ssrvid\s(?<sid>[^\(]+)[^\)]+\)\sprid\s(?<pvid>\S+)
+EXTRACT-oscam_divid_8_2 = oscam.*\(chk\) no match,\s(?<caid>[^@]+)@(?<pvid>\S+)\s
+EXTRACT-oscam_divid_8_3 = oscam.*\(cccam\)\scccam.*version: (?<cccam_version>[^,]+),.*nodeid:\s(?<node_id>\S+)
+EXTRACT-oscam_divid_8_4 = oscam.*\(cccam\)\scccam.*client.*'\s\((?<nodeid>[^)]+)\)\srunning\sv(?<cccam_version>\S+)
+EXTRACT-oscam_server_name_8_1 = oscam.*\(chk\).*filter\s(?<caid>[^@]+)@(?<pvid>\S+)
+EXTRACT-oscam_server_name_8_2 = oscam.*\(chk\)[^']+'(?<server>[^']+)'
+
+# Log level=64
+EXTRACT-oscam_caid_64_1 = oscam.*\(reader\).*reader\s(?<caid>\S+)
+EXTRACT-oscam_server_name_64_1 = oscam.*\(emmcache\).*reader:(?<server>[^,]+),
+
+# Log level=256
+EXTRACT-oscam_client_name_256_1 = oscam.*(ecm|cache|stat)\).*client\s(?<client>[\w-]+)[, ]
+EXTRACT-oscam_client_name_256_2 = oscam.*\(reader\) {client\s(?<client>[^,]+),
+EXTRACT-oscam_divid_256_1 = oscam.*\((cache|ecm)\).+caid (?<caid>[^,]+), srvid (?<sid>[^ }]+)}\s
+EXTRACT-oscam_server_name_256_1 = oscam.*\(stat\) loadbalancer: reader\s(?<server>[^ ]+)
+EXTRACT-oscam_server_name_256_2 = oscam.*\(stat\).*reader\s(?<server>[^:]+):
+EXTRACT-oscam_server_name_256_3 = oscam.*\(reader\).* to reader\s(?<server>[\S]+)\.\.\.\s
+EXTRACT-oscam_server_name_256_4 = oscam.*\(ecm\).* (reader|Reader:)\s(?<server>\S+)\src
+
+# Log level=512
+EXTRACT-oscam_cache_recive_node_512_1 = oscam.*\(cache\).* from\s(?<cachernode>\S+)
+EXTRACT-oscam_cache_recive_node_512_2 = oscam.*\(cccam\) cacheex:.* node[s ]*[\S]*\s(?<cachernode>\S+)
+EXTRACT-oscam_cache_node = oscam.*\(cccam\) cacheex: received node\s(?<node>\S+)\s
+EXTRACT-oscam_server_name_512_1 = oscam.*\(cache\).*\sfrom\s(?<server>[^(]+)\(
+
+# Log level=1024
+EXTRACT-oscam_client_name_1024_1 = oscam.*\(ecm\) Client\s(?<client>\S+)\s(csphash|ECM)
