--- a/default/tags.conf
+++ b/default/tags.conf
@@ -808,7 +808,7 @@ log_32 = enabled
 [eventtype=oscam_reader-io-sending]
 log_32 = enabled
 
-[eventtype=oscam_reader-io-write timeout]
+[eventtype=oscam_reader-io-write-timeout]
 log_32 = enabled
 
 
