--- a/default/props.conf
+++ b/default/props.conf
@@ -43,7 +43,7 @@ EXTRACT-oscam_client_name_0_10 = oscam.*killing client (?<client>\S+)
 EXTRACT-oscam_demuxer_0_1 =  oscam.*\(dvbapi\) Demuxer\s(?<demuxer>\d+)
 EXTRACT-oscam_divid_0_1 = oscam.*\((cache|ecm|stat)\).+(\s|\()(?<caid>[^@]+)@(?<pvid>[^\/]+)\/\w{4}\/(?<sid>[^\/]{4})\/[^:]+:(?<hash>[^)]+)\)
 EXTRACT-oscam_divid_0_2 = oscam.*\(constcw\).+CAID\s(?<caid>[^ ]+)\sPROVID\s(?<pvid>[^ ]+)\sSRVID\s(?<sid>[^ ]+)
-EXTRACT-oscam_divid_0_3 = oscam.*\(dvbapi\).*srvid\s(?<caid>\S+)\s\((?<channel>[^)]+)\) on adapter\s(?<adapter>\S+)\scamask\s(?<camask>\$
+EXTRACT-oscam_divid_0_3 = oscam.*\(dvbapi\).*srvid\s(?<caid>\S+)\s\((?<channel>[^)]+)\) on adapter\s(?<adapter>\S+)\scamask\s(?<camask>\S+)\sindex\s(?<oindex>\S+)\spmtpid\s(?<pmtpid>\S+)
 EXTRACT-oscam_divid_0_4 = oscam.*\(dvbapi\).*CAID\s(?<caid>\S+)\sPROVID\s(?<pvid>\S+)\sECMPID\s(?<ecmpid>\S+) ANY CHID PMTPID (?<pmtpid>\S+) VPID (?<vpid>\S+)
 EXTRACT-oscam_divid_0_5 = oscam.*\(dvbapi\).*CAID:\s(?<caid>\S+)\sECM_PID:\s(?<ecmpid>\S+)\sPROVID:\s(?<pvid>\S+)
 EXTRACT-oscam_divid_0_6 = oscam.*\(dvbapi\).+serving srvid\s(?<srvid>\S+)\s\((?<channel>.+)\)\son\sadapter\s(?<adapter>\S+)\scamask\s(?<camask>\S+)\sindex\s(?<inx>\S+)\spmtpid\s(?<pmtpid>\S+)
