--- a/default/app.conf
+++ b/default/app.conf
@@ -9,12 +9,12 @@
 
 [ui]
 is_visible=true
-label=OSCam 3.1
+label=OSCam 3.2
 
 [launcher]
-author = Jotne
-description = OScam add-on for server.
-version = 3.1
+author = Jotne 
+description = OScam add-on for server. 
+version = 3.2
 
 [package]
 id = OSCam
@@ -45,3 +45,17 @@ check_for_updates = 0
 # 3.1 Added missing info about "13. OSCam ecm errors".
 # 3.1 Fixed wrong extraction of sid/pid etc
 # 3.1 Fixed missing date range in "6. OSCam Channels not in oscam.srvid".
+
+# 3.2 Correct file name
+# 3.2 in view 2-3. Duplicate Clients, added IP of duplicat login attempt
+# 3.2 Wrong server name extracted, fixed
+# 3.2 in view 2-7. Expired clients, added missing "client=$Client$"
+# 3.2 in view 4. Added hit counters in drop down boxes and removed anonymous
+# 3.2 in view 7. Show only top 15 clients to not fill up the list
+# 3.2 in view 1. and 2. added default to "span"
+# 3.2 in view 1-13 added value counters for drop down boxes
+# 3.2 in view 3. Added hit counters in found/not found
+# 3.2 in view 11 fixed missing host= for "restart from web gui"
+# 3.2 Added view 10. OSCam Serves map location
+# 3.2 Added "limit=0" seveplaces to not limit hosts/clients
+# 3.2 In view 14. fixed som compiling errors
