--- a/default/event_renderers.conf
+++ b/default/event_renderers.conf
@@ -16,3 +16,104 @@ priority = 5
 eventtype = oscam_status-notfound
 css_class = et_yellow
 priority = 5
+
+[error1]
+eventtype = oscam_client-disconnected
+css_class = et_red
+priority = 5
+
+[error2]
+eventtype = oscam_client-wrong-password-or-disabled
+css_class = et_red
+priority = 5
+
+[error3]
+eventtype = oscam_client-invalid-access
+css_class = et_red
+priority = 5
+
+[error4]
+eventtype = oscam_client-not-found
+css_class = et_red
+priority = 5
+
+[error5]
+eventtype = oscam_client-disabled
+css_class = et_red
+priority = 5
+
+[error6]
+eventtype = oscam_reader-connction-timed-out
+css_class = et_red
+priority = 5
+
+[error7]
+eventtype = oscam_emu-ecm-not-supported
+css_class = et_red
+priority = 5
+
+[error8]
+eventtype = oscam_reader-connetion-refuesed
+css_class = et_red
+priority = 5
+
+[error9]
+eventtype = oscam_client-illegal username
+css_class = et_red
+priority = 5
+
+[error10]
+eventtype = oscam_reader-init-error
+css_class = et_red
+priority = 5
+
+[error11]
+eventtype = oscam_no-route-to-host
+css_class = et_red
+priority = 5
+
+[info1]
+eventtype = oscam_reader-connecting
+css_class = et_blue
+priority = 5
+
+[info2]
+eventtype = oscam_log-rotation
+css_class = et_blue
+priority = 5
+
+[info3]
+eventtype = oscam_log-duplicate-lines
+css_class = et_blue
+priority = 5
+
+[info4]
+eventtype = oscam_loadbalancer-statistic-saved
+css_class = et_blue
+priority = 5
+
+[info5]
+eventtype = oscam_client-granted
+css_class = et_blue
+priority = 5
+
+[info6]
+eventtype = oscam_emm-skipped
+css_class = et_blue
+priority = 5
+
+[info7]
+eventtype = oscam_reader-dns-resolved
+css_class = et_blue
+priority = 5
+
+[info8]
+eventtype = oscam_reader-disconnected-close
+css_class = et_blue
+priority = 5
+
+[info9]
+eventtype = oscam_reader-disconnected-disconnected
+css_class = et_blue
+priority = 5
+
