--- a/default/eventtypes.conf
+++ b/default/eventtypes.conf
@@ -189,6 +189,9 @@ search = "oscam* (main) Machine"
 [oscam_main-release]
 search = "oscam* (main) Release"
 
+[oscam_main-restart-requested]
+search = "oscam* (main) restart oscam requested"
+
 [oscam_main-signal-handling-initialized]
 search = "oscam* (main) signal handling initialized"
 
@@ -649,7 +652,7 @@ search = "oscam* (cccam) cccam(s) * parse_msg*"
 search = "oscam* (cccam) cccam: send ack:"
 
 [oscam_cccam-version-client-get]
-search = "oscam* (cccam) cccam(s) * client"
+search = "oscam* (cccam) cccam(s) * client" 
 
 [oscam_cccam-version-server-sent]
 search = "oscam* (cccam) cccam(s) * version:"
@@ -1000,3 +1003,4 @@ search = "oscam* (ecm) Client * ECM dump"
 
 [oscam_ecm-client-csphash]
 search = "oscam* (ecm) Client * csphash"
+
