--- a/default/props.conf
+++ b/default/props.conf
@@ -41,11 +41,14 @@ EXTRACT-oscam_client_name_0_8 = oscam.*cccam\)\saccount\s'(?<client>[^']+)'\s
 EXTRACT-oscam_client_name_0_9 = oscam.*s\)\s(?<client>[\w-]+):\spacket
 EXTRACT-oscam_client_name_0_10 = oscam.*killing client (?<client>\S+)
 EXTRACT-oscam_demuxer_0_1 =  oscam.*\(dvbapi\) Demuxer\s(?<demuxer>\d+)
-EXTRACT-oscam_divid_0_1 = oscam.*\((cache|ecm|stat)\).+(\s|\()(?<caid>[^@]+)@(?<pvid>[^\/]+)\/\w{4}\/(?<sid>[^\/]{4})\/[^:]+:(?<hash>[^)]+)\)
+#EXTRACT-oscam_divid_0_1 = oscam.*\((cache|ecm|stat)\).+(\s|\()(?<caid>[^@]+)@(?<pvid>[^\/]+)\/\w{4}\/(?<sid>[^\/]{4})\/[^:]+:(?<hash>[^)]+)\)
+EXTRACT-oscam_divid_0_1 = oscam.*\((cache|ecm|stat)\).+(\s|\()(?<caid>[^@]+)@(?<pvid>[^\/]+)\/\w{4}\/(?<sid>[^\/]{4})\/[^:]+:(?<hash>[^):]+)(:|\))((?<dist>[^):]+)|)
 EXTRACT-oscam_divid_0_2 = oscam.*\(constcw\).+CAID\s(?<caid>[^ ]+)\sPROVID\s(?<pvid>[^ ]+)\sSRVID\s(?<sid>[^ ]+)
 EXTRACT-oscam_divid_0_3 = oscam.*\(dvbapi\).*CAID\s(?<caid>\S+)\sPROVID\s(?<pvid>\S+)\sECMPID\s(?<ecmpid>\S+) ANY CHID PMTPID (?<pmtpid>\S+) VPID (?<vpid>\S+)
 EXTRACT-oscam_divid_0_4 = oscam.*\(dvbapi\).*CAID:\s(?<caid>\S+)\sECM_PID:\s(?<ecmpid>\S+)\sPROVID:\s(?<pvid>\S+)
 EXTRACT-oscam_divid_0_5 = oscam.*\(dvbapi\).+serving srvid\s(?<srvid>\S+)\s\((?<channel>.+)\)\son\sadapter\s(?<adapter>\S+)\scamask\s(?<camask>\S+)\sindex\s(?<inx>\S+)\spmtpid\s(?<pmtpid>\S+)
+EXTRACT-oscam_dns_0_1 = oscam.*\(reader\)\s(?<dns>[^:]+):\sresolved
+EXTRACT-oscam_dns_0_2 = oscam.*\(reader\).*device\s(?<dns>\S+)$
 EXTRACT-oscam_ecm_status_0_1 = oscam.*\): (?<ecm>[^(]+) \(.*ms
 EXTRACT-oscam_hardware_0_1 = oscam.*build r\d+ \((?<hardware>[^\)]+)\)
 EXTRACT-oscam_host_id_0_1 = oscam\[(?<host_id>[^\]]+)\]:
@@ -65,10 +68,10 @@ EXTRACT-oscam_server_name_0_3 = oscam.*cccam\(r\)\s(?<server>[^: ]+)
 EXTRACT-oscam_server_name_0_4 = oscam.*from\sreader\s(?<server>[^ ,]+)
 EXTRACT-oscam_server_name_0_5 = oscam.*resolve\s(?<server>[^ ,]+)
 EXTRACT-oscam_server_name_0_6 = oscam.*\((webif|emmcache)\)\s[rR]eader\s(?<server>\S+)\s
-EXTRACT-oscam_server_name_0_7 = oscam.*cccam\)\s(?<server>\S+)
 EXTRACT-oscam_session_id_0_1 = oscam\[\d+\]:\s(?<session_id>\w{8})
 EXTRACT-oscam_src_ip_0_1 = oscam.*[\s(](?<src_ip>\d+\.\d+\.\d+\.\d+)
 EXTRACT-oscam_src_port_0_1 = oscam.*\s\d+\.\d+\.\d+\.\d+:(?<src_port>\d+)
+EXTRACT-oscam_system_0_1 = oscam.*\)\s(?<system>\S+)\sdetected
 EXTRACT-oscam_web_user_ip_0_1 = oscam.*WebIF\sfrom\s(?<web_user_ip>\d+\.\d+\.\d+\.\d+)
 
 # Log level=1
