--- a/default/tags.conf
+++ b/default/tags.conf
@@ -245,6 +245,10 @@ log_0 = enabled
 info = enabled
 log_0 = enabled
 
+[eventtype=oscam_main-restart-requested]
+warning = enabled
+log_0 = enabled
+
 [eventtype=oscam_main-signal-handling-initialized]
 info = enabled
 log_0 = enabled
@@ -1123,3 +1127,5 @@ log_1024 = enabled
 
 [eventtype=oscam_ecm-client-csphash]
 log_1024 = enabled
+
+
