--- a/default/app.conf
+++ b/default/app.conf
@@ -9,12 +9,12 @@
 
 [ui]
 is_visible=true
-label=OSCam 3.2
+label=OSCam 3.3
 
 [launcher]
-author = Jotne 
-description = OScam add-on for server. 
-version = 3.2
+author = Jotne
+description = OScam add-on for server.
+version = 3.3
 
 [package]
 id = OSCam
@@ -59,4 +59,18 @@ check_for_updates = 0
 # 3.2 Added view 10. OSCam Serves map location
 # 3.2 Added "limit=0" several places to not limit hosts/clients
 # 3.2 In view 14. fixed som compiling errors
+# 3.2 In view 12. fixed bad numbering
 
+# 3.3 In view 1. and 2. Fixed missing search in host dropdown box
+# 3.3 In view 2.7 added missing "client" in search
+# 3.3 In view 2.7 added missing autohiding of panel
+# 3.3 In view 1. and 2. foxed wrong hit counting
+# 3.3 In view 2.4 Change from "<![CDATA[..]]>" to "&lt;" "&gt;" to escape "<" and ">"
+# 3.3 In view 1. removed internal card readers from statistics
+# 3.3 In view 4. Changed Found/not Found to Drop down box
+# 3.3 In view 10. Show number of unique ip per server
+# 3.3 In view 9. Show number of unique ip per server and option to show ip
+# 3.3 In view 9. Shows internal behind client name for private IP, client not shown on map
+# 3.3 In view 1. and 2. fixed storting of drop down boxes  alphabeticaly
+# 3.3 Rewritten view 5. to show more exact number of viewers on each channel
+# 3.3 Cleaned upp all query in all views to conform more with standards, like "|" in front of the lines
